--- a/src/components/qualification/qualification.css
+++ b/src/components/qualification/qualification.css
@@ -26,7 +26,8 @@
 }
 
 .qualification__button{
-    border-bottom: solid 1px black;
+    border-bottom: solid 1px var(--title-color);
+
 }
 
 .qualification__icon{
