--- a/src/components/services/services.css
+++ b/src/components/services/services.css
@@ -17,7 +17,7 @@
     border: 4px solid rgb(243, 162, 56,0.8);
     box-shadow: 8px 8px 0px rgb(243, 162, 56,0.4);
     transition: .2s;
-    height: 400px;
+    height: 415px;
 }
 .service__offer:hover{
     cursor: pointer;
@@ -134,10 +134,21 @@
 
     .service__offer{
         width: 340.5px;
-        height: 420px;
+        height: 425px;
         margin-left: 1.2rem;
     }
    }
+
+   .service__offer .type{
+    float: right;
+    background-color: rgb(255, 237, 214);
+   margin-right: 0.5rem;
+   border-radius: 15px ;
+    padding: 5px 10px;
+    color: rgb(243, 162, 56);
+    font-weight: 800;
+   }
+
    @media screen and (max-width: 814px) {
     .service__offers{
         display: grid;
