--- a/src/components/detail_services/detail.css
+++ b/src/components/detail_services/detail.css
@@ -142,7 +142,6 @@
   }
   
   
-  /* Responsive adjustments */
   @media screen and (max-width: 768px) {
     .service-detail-title {
       font-size: 1.75rem;
@@ -159,4 +158,18 @@
     .service-features li {
       font-size: 1rem;
     }
+
+      .service-detail-image-container img  {
+        width: 420px;
+        height: 300px;
+       
+        
+       
+      }
+      .service-detail-image-container  {
+        width: 420px;
+        height: 300px;
+        padding-right: 0.8rem;
+
+      }
   }
