--- a/src/components/scrollToTop/ScrollToTop.css
+++ b/src/components/scrollToTop/ScrollToTop.css
@@ -26,7 +26,7 @@
 }
 
 .scroll-to-top:hover {
-  background-color: var(--title-color-dark);
+  background-color: black;
   transform: translateY(-3px);
 }
 
